--- a/my_website/index.html
+++ b/my_website/index.html
@@ -7,10 +7,15 @@
   <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-	<a href="Something.html">Something</a>
+	  <a href="ToBeDecided.html">ToBeDecided</a>
+  
     <h1>This is my test Home Page!</h1>
-
+  
+    <p>Hello and welcome, this is only the start to my website. This site will be improved upon as time passes.</p>
+  
   <BODY BACKGROUND="http://big.assets.huffingtonpost.com/95qHQgg.gif">
+  
   <BODY BACKGROUND="http://img.lum.dolimg.com/v1/images/14_dance_off_-_genie_01481bb0.gif">
+  
   </body>
 </html>
