--- a/portfolio.html
+++ b/portfolio.html
@@ -9,11 +9,11 @@
     <a href="portfolio.html">Portfolio</a>
 	  <a href="ToBeDecided.html">ToBeDecided</a>
    
-    <h1>Hello & welcome to my Portfolio page!</h1>
+    <h1>Hello and welcome to my Portfolio page!</h1>
    
-	  <img src="images/download.png" height="250"> 
+	<img src="images/download.png" height="250"> 
    
-    <img src="images/images.jpg" height="250">
+    	<img src="images/images.jpg" height="250">
     
     <p>This page is still a work in progress, there will be more that is going to be added eventuallly some of the links may or may not work, youve been warned.<p>
 	 
